tests/error/comptime_arg_errors/dependent_mismatch2.err
Error: Type mismatch (at $FILE:11:11)
   | 
 9 | @guppy
10 | def bar(n: nat @comptime, m: nat @comptime) -> None:
11 |     foo(n, array(i for i in range(m)))
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected expression of type `array[int, 42]`, got
   |                                       `array[int, 43]`

Guppy compilation failed due to 1 previous error
